Add PhD Thesis and update Bio

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@ layout: main
         {% if post.code %}
 	<p style="display:inline;"><b>[<a href="{{post.code}}">Code</a>]</p></b>
         {% endif %}
+        {% if post.video %}
+	<p style="display:inline;"><b>[<a href="{{post.video}}">Video</a>]</p></b>
+        {% endif %}
     </span>
   </div>
 </article>
